Fix table collapsing issue

--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,10 @@ input {
   border: none;
 }
 
+table {
+  width: auto;
+}
+
 td, th {
   border-color: #c0c0c0;
 }
